--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             window.location.href = 'https://github.com/bobbodaddeuk'
         }
         function showdog() {
-            var image = document.getElementById('dog');
+            let image = document.getElementById('dog');
             if (image.style.display === 'none') {
                 image.style.display = 'block';
             } else {
