--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         }
 
         .github {
-            width: 100px;
+            width: 60px;
             height: 60px;
             background-image: url(https://i.pinimg.com/736x/b1/5e/ed/b15eedbdafbbdbca3249e3942f4faf3b.jpg);
             border: none;
@@ -162,7 +162,7 @@
 <body>
     <div class="box">
         <img id='dog' src="https://i.imgur.com/dzDFxcE.png" alt="퐁이" style="display: none;" />
-        <h1 class="introduce">팀원 소개</h1>
+        <h1 class="introduce">123123</h1>
         <div class="profile">
             <img src="https://i.imgur.com/JAVOIgV.jpg" alt='우승원' />
         </div>
