--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <body>
     <div class="box">
         <img id='dog' src="https://i.imgur.com/dzDFxcE.png" alt="퐁이" style="display: none;" />
-        <h1 class="introduce">123123</h1>
+        <h1 class="introduce">팀원 소개</h1>
         <div class="profile">
             <img src="https://i.imgur.com/JAVOIgV.jpg" alt='우승원' />
         </div>
