-자유로운 영혼

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             }
 
         }
-        
+
 
     </script>
 </head>
@@ -170,7 +170,7 @@
         </div>
         <div class="mytitle">
             <p>우승원</p>
-            <p>ENFP</p>
+            <p>ENFP - 자유로운 영혼</p>
 
         </div>
         <div class="blog">
